--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -32,7 +32,9 @@
       <p class="card-text">{{ user.email }}</p>
     </div>
     <div class="card-block">
-      <button class="btn btn-danger" (click)="signOut()">Sign out</button>
+        <button mat-raised-button type="submit" class="btn btn-danger pull-left" href="/twitterData">Lets go</button>
+
+        <!--<button class="btn btn-danger" (click)="signOut()">Sign out</button>-->
     </div>
   </div>
 
