--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -18,6 +18,7 @@
     <div class="card-block" style="padding: 15px">
       <!--<button class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>-->
       <button style="background:#3b5998!important;" class="btn btn-social-icon btn-facebook" (click)="signInWithFB()"><span class="fa fa-facebook"></span></button>
+
       <!--<button class="btn btn-social-icon btn-linkedin" (click)="signInWithLinkedIn()"><span class="fa fa-linkedin"></span></button>-->
     </div>
   </div>
@@ -32,7 +33,7 @@
       <p class="card-text">{{ user.email }}</p>
     </div>
     <div class="card-block">
-        <button mat-raised-button type="submit" class="btn btn-danger pull-left" href="/twitterData">Lets go</button>
+      <a href="/twitterData"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>
 
         <!--<button class="btn btn-danger" (click)="signOut()">Sign out</button>-->
     </div>
