--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -18,7 +18,7 @@
     <div class="card-block" style="padding: 15px">
       <!--<button class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>-->
       <button style="background:#3b5998!important;" class="btn btn-social-icon btn-facebook" (click)="signInWithFB()"><span class="fa fa-facebook"></span></button>
-      <a  (click)="navTo()"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>
+      <!--<a  (click)="navTo()"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>-->
 
 
 
@@ -35,7 +35,7 @@
       <h4 class="card-title">{{ user.name }}</h4>
       <p class="card-text">{{ user.email }}</p>
     </div>
-    <div class="card-block">
+    <div class="card-block" style="text-align: center">
       <a (click)="navTo()"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>
 
         <!--<button class="btn btn-danger" (click)="signOut()">Sign out</button>-->
