--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,16 +3,16 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="https://www.janasenaparty.org/" target="_blank">
                         JanaSena</a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://www.janasenaparty.org/about" target="_blank">
                         About Us
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="https://events.janasenaparty.org/#/home" target="_blank">
                         Events
                     </a>
                 </li>
@@ -22,7 +22,7 @@
         <div class="copyright pull-right">
             &copy;
             {{test | date: 'yyyy'}}, made with love towards
-            <a href="" target="_blank">JanaSena</a> for a better Society.
+            <a href="https://www.janasenaparty.org/" target="_blank">JanaSena</a> for a better Society.
         </div>
     </div>
 </footer>
