--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -4,7 +4,7 @@
         <div class="sidebar-background"></div>
     </div>
     <div class="main-panel">
-        <app-navbar></app-navbar>
+        <!--<app-navbar></app-navbar>-->
         <router-outlet></router-outlet>
         <div *ngIf="isMaps('maps')">
             <app-footer></app-footer>
