--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -4,44 +4,53 @@
           <div class="col-md-8">
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title">Edit Profile</h4>
-                      <p class="card-category">Complete your profile</p>
+                      <h4 class="card-title">Profile</h4>
+                      <!--<p class="card-category">Complete your profile</p>-->
+                  </div>
+                  <div class="card-profile" style="margin-top: 63px">
+                      <div class="card-avatar">
+                          <a href="#pablo">
+                              <img class="img" [attr.src]="user.photoUrl" />
+                          </a>
+                      </div>
+
                   </div>
                   <div class="card-body">
+
                       <form>
                           <div class="row">
-                              <div class="col-md-5">
-                                <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Company (disabled)" disabled>
-                                  </mat-form-field>
-                              </div>
-                              <div class="col-md-3">
+                              <!--<div class="col-md-5">-->
+                                <!--<mat-form-field class="example-full-width">-->
+                                    <!--<input matInput placeholder="Company (disabled)" disabled value="edao">-->
+                                  <!--</mat-form-field>-->
+                              <!--</div>-->
+                              <!--<div class="col-md-3">-->
+                                  <!--<mat-form-field class="example-full-width">-->
+                                    <!--<input matInput placeholder="Username">-->
+                                  <!--</mat-form-field>-->
+                              <!--</div>-->
+                              <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Username">
-                                  </mat-form-field>
-                              </div>
-                              <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Email address" type="email">
+                                    <input matInput placeholder="Email address" type="email" [attr.value]="user.email">
                                   </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Fist Name" type="text">
+                                  <input matInput placeholder="First Name" type="text" [attr.value]="user.firstName">
                                 </mat-form-field>
                               </div>
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Last Name" type="text">
+                                  <input matInput placeholder="Last Name" type="text" [attr.value]="user.lastName">
                                 </mat-form-field>
                               </div>
                           </div>
                           <div class="row">
                               <div class="col-md-12">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Adress" type="text">
+                                  <input matInput placeholder="Address" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
@@ -62,44 +71,44 @@
                                 </mat-form-field>
                               </div>
                           </div>
-                          <div class="row">
-                              <div class="col-md-12">
-                                <label>About Me</label>
-                                <mat-form-field class="example-full-width">
-                                   <textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
-                                 </mat-form-field>
-                                  <!-- <div class="form-group">
+                          <!--<div class="row">-->
+                              <!--<div class="col-md-12">-->
+                                <!--<label>About Me</label>-->
+                                <!--<mat-form-field class="example-full-width">-->
+                                   <!--<textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>-->
+                                 <!--</mat-form-field>-->
+                                  <!--&lt;!&ndash; <div class="form-group">-->
 
-                                      <div class="form-group">
-                                          <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                                          <textarea class="form-control" rows="5"></textarea>
-                                      </div>
-                                  </div> -->
-                              </div>
-                          </div>
+                                      <!--<div class="form-group">-->
+                                          <!--<label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>-->
+                                          <!--<textarea class="form-control" rows="5"></textarea>-->
+                                      <!--</div>-->
+                                  <!--</div> &ndash;&gt;-->
+                              <!--</div>-->
+                          <!--</div>-->
                           <button mat-raised-button type="submit" class="btn btn-danger pull-right">Update Profile</button>
                           <div class="clearfix"></div>
                       </form>
                   </div>
               </div>
           </div>
-          <div class="col-md-4">
-              <div class="card card-profile">
-                  <div class="card-avatar">
-                      <a href="#pablo">
-                          <img class="img" src="../assets/img/faces/marc.jpg" />
-                      </a>
-                  </div>
-                  <div class="card-body">
-                      <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-                      <h4 class="card-title">Alec Thompson</h4>
-                      <p class="card-description">
-                          Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
-                      </p>
-                      <a href="#pablo" class="btn btn-danger btn-round">Follow</a>
-                  </div>
-              </div>
-          </div>
+          <!--<div class="col-md-4">-->
+              <!--<div class="card card-profile">-->
+                  <!--<div class="card-avatar">-->
+                      <!--<a href="#pablo">-->
+                          <!--<img class="img" src="../assets/img/faces/marc.jpg" />-->
+                      <!--</a>-->
+                  <!--</div>-->
+                  <!--<div class="card-body">-->
+                      <!--<h6 class="card-category text-gray">CEO / Co-Founder</h6>-->
+                      <!--<h4 class="card-title">Alec Thompson</h4>-->
+                      <!--<p class="card-description">-->
+                          <!--Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...-->
+                      <!--</p>-->
+                      <!--<a href="#pablo" class="btn btn-danger btn-round">Follow</a>-->
+                  <!--</div>-->
+              <!--</div>-->
+          <!--</div>-->
       </div>
   </div>
 </div>
