--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
                           </i>
                       </div>
                       <p class="card-category">% Change</p>
-                      <h3 class="card-title">+245</h3>
+                      <h3 class="card-title">+3 %</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
