--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -380,7 +380,7 @@
               <div class="card">
                   <div class="card-header card-header-success">
                       <h4 class="card-title">Trends Supporting JSP</h4>
-                      <p class="card-category">as of  15th July, 2018</p>
+                      <p class="card-category">as of  15th June, 2018</p>
                   </div>
                   <div class="card-body table-responsive">
                       <table class="table table-hover">
@@ -401,7 +401,7 @@
                                   <td>India</td>
                               </tr>
                               <tr>
-                                  <td>JanaSens ManaSena</td>
+                                  <td>JanaSena ManaSena</td>
                                   <td>6,142</td>
                                   <td>Hyderabad</td>
                               </tr>
@@ -415,25 +415,64 @@
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">Trends Against JSP</h4>
-                      <p class="card-category">as of  15th July, 2018</p>
+                      <p class="card-category">as of  15th June, 2018</p>
+                  </div>
+                  <div class="card-body table-responsive">
+                      <!--<table class="table table-hover">-->
+                          <!--<thead class="text-danger">-->
+                          <!--<th>Trend</th>-->
+                          <!--<th>Tweet Count</th>-->
+                          <!--<th>Trending Location</th>-->
+                          <!--</thead>-->
+                          <!--<tbody>-->
+                          <!--<tr>-->
+                              <!--<td>#FakePolitician</td>-->
+                              <!--<td>6,738</td>-->
+                              <!--<td>India</td>-->
+                          <!--</tr>-->
+                          <!--<tr>-->
+                              <!--<td>#PaidArtist</td>-->
+                              <!--<td>3,789</td>-->
+                              <!--<td>India</td>-->
+                          <!--</tr>-->
+
+                          <!--</tbody>-->
+                      <!--</table>-->
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+              <div class="card">
+                  <div class="card-header card-header-success">
+                      <h4 class="card-title">Top Tweeters Supporting JSP</h4>
+                      <p class="card-category">as of  15th June, 2018</p>
                   </div>
                   <div class="card-body table-responsive">
                       <table class="table table-hover">
-                          <thead class="text-danger">
-                          <th>Trend</th>
-                          <th>Tweet Count</th>
-                          <th>Trending Location</th>
+                          <thead class="text-success">
+                          <th>Handle</th>
+                          <th>Followers Count</th>
+                          <th>Tweets</th>
+                          <th>Location</th>
                           </thead>
                           <tbody>
                           <tr>
-                              <td>#BringBabuBack</td>
-                              <td>6,738</td>
-                              <td>India</td>
+                              <td>Tweeter 1</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
                           </tr>
                           <tr>
-                              <td>#TeluguDesam</td>
-                              <td>3,789</td>
-                              <td>India</td>
+                              <td>Tweeter 2</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                          </tr>
+                          <tr>
+                              <td>Tweeter 3</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
                           </tr>
 
                           </tbody>
@@ -441,6 +480,46 @@
                   </div>
               </div>
           </div>
+          <div class="col-lg-6 col-md-12">
+              <div class="card">
+                  <div class="card-header card-header-danger">
+                      <h4 class="card-title">Top Tweeters Against JSP</h4>
+                      <p class="card-category">as of  15th June, 2018</p>
+                  </div>
+                  <div class="card-body table-responsive">
+                      <table class="table table-hover">
+                          <thead class="text-danger">
+                          <th>Handle</th>
+                          <th>Followers Count</th>
+                          <th>Tweets</th>
+                          <th>Location</th>
+                          </thead>
+                          <tbody>
+                          <tr>
+                              <td>Tweeter 1</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                          </tr>
+                          <tr>
+                              <td>Tweeter 2</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                          </tr>
+                          <tr>
+                              <td>Tweeter 3</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                              <td>XXXX</td>
+                          </tr>
+
+                          </tbody>
+                      </table>
+                  </div>
+              </div>
+          </div>
+
 
       </div>
   </div>
