--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -41,7 +41,9 @@
     </div>
   </div>
 
-
+<div style="padding: 20px; font-size: 20px; color: white">
+  Dashboard for Twitter Analytics and Content Management
+</div>
 
 
 </div>
