--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -50,7 +50,7 @@
               <figcaption>
                   <button mat-raised-button type="submit" class="btn btn-danger pull-left">Approve</button>
                   <button mat-raised-button type="submit" class="btn btn-danger pull-right">Decline</button>
-                  <font>{{user.name}}</font>
+                  <!--<font>{{user.name}}</font>-->
                   <!--<div class="sharethis-inline-share-buttons"></div>-->
 
 
