big one whole content

--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -62,7 +62,8 @@
 
               <blockquote class="twitter-tweet">
                   <p lang="pt" dir="ltr">{{tweets.text}}</p>&mdash; {{tweets.screenName}}
-                  <a [attr.href]="'https://twitter.com/' + tweets.username + '/status/' + tweets.tweetID + '?ref_src=twsrc%5Etfw'">July 16, 2018</a></blockquote>
+                  <!--<a [attr.href]="'https://twitter.com/' + tweets.username + '/status/' + tweets.tweetID + '?ref_src=twsrc%5Etfw'">July 16, 2018</a>-->
+              </blockquote>
               <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               <figcaption>
                   tweets
