--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -16,13 +16,17 @@
       <p class="card-text">Sign in with</p>
     </div>
     <div class="card-block" style="padding: 15px">
-      <!--<button class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>-->
+
+      <button style="background: #DD4B39!important;" class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>
       <button style="background:#3b5998!important;" class="btn btn-social-icon btn-facebook" (click)="signInWithFB()"><span class="fa fa-facebook"></span></button>
       <!--<a  (click)="navTo()"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>-->
 
 
 
       <!--<button class="btn btn-social-icon btn-linkedin" (click)="signInWithLinkedIn()"><span class="fa fa-linkedin"></span></button>-->
+
+      <button class="btn btn-danger mat-raised-button" mat-raised-button="" (click)="navTo()" type="button"><span class="mat-button-wrapper">Continue as a Guest</span><div class="mat-button-ripple mat-ripple" matripple=""></div><div class="mat-button-focus-overlay"></div></button>
+
     </div>
   </div>
   <div *ngIf="user" class="card text-center">
