--- a/src/app/icons/icons.component.css
+++ b/src/app/icons/icons.component.css
@@ -24,7 +24,7 @@ div#columns figure {
 
 div#columns figure img {
     width: 100%; height: auto;
-    border-bottom: 1px solid #ccc;
+    /*border-bottom: 1px solid #ccc;*/
     padding-bottom: 15px;
     margin-bottom: 5px;
 }
