--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="card-block" style="padding: 15px">
 
-      <button style="background: #DD4B39!important;" class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>
+      <!--<button style="background: #DD4B39!important;" class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span class="fa fa-google"></span></button>-->
       <button style="background:#3b5998!important;" class="btn btn-social-icon btn-facebook" (click)="signInWithFB()"><span class="fa fa-facebook"></span></button>
       <!--<a  (click)="navTo()"><button mat-raised-button type="submit" class="btn btn-danger pull-left">Lets go</button></a>-->
 
